[package]
name = "termdj"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

[dependencies]
pnet = "0.22.0"
ipnetwork = "0.14.0"
byteorder = "1.3.1"
tokio = "0.2.0"
bytes = "0.4.12"
futures = "0.1.28"
nom = "5.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
