[package]
name = "termdj"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

[dependencies]
pnet = "0.25.0"
ipnetwork = "0.15.0"
byteorder = "1.3.1"
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["udp", "codec"] }
bytes = "0.5.0"
futures = "0.3.4"
nom = "5.0.0"
id3 = "0.5.0"
walkdir = "2.3.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
