[package]
name = "termdj"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

[dependencies]
pnet = "0.28.0"
byteorder = "1.3.1"
tokio = { version = "1.0.3", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["net", "codec"] }
bytes = "^1.0.0"
futures = "0.3.4"
nom = "6.0.1"
id3 = "0.5.0"
walkdir = "2.3.1"

[dev-dependencies]
pretty_assertions = "0.7.0"
